# graspp_2025_spring

./: data_merge(energy structure and GDP).py  pyproject.toml  test.py
data/examples/module_4/: manifesto_us.parquet
notebooks/: HW2_Vizualization.ipynb
notebooks/module_4/week_9/: scraping.ipynb  transformer_spacy_scrape.ipynb
notebooks/quiz/: quiz_1_answerkey.ipynb
src/data/: download_manifesto.py
