[project]
name = "graspp-2025-spring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "en-core-web-sm",
    "folium>=0.19.5",
    "gradio>=5.29.0",
    "jupyter>=1.1.1",
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "selenium>=4.33.0",
    "spacy>=3.8.7",
    "statsmodels>=0.14.4",
    "streamlit>=1.45.0",
    "torch>=2.7.0",
    "transformers>=4.52.4",
    "wordcloud>=1.9.4",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
